Repair admin bug of multiple counter jumps

--- a/client/app.css
+++ b/client/app.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "typo";
-    src: url('mplus-2m-regular.ttf') format('opentype');
+    src: url('atkinson.ttf') format('opentype');
   }
 
 @font-face{
